src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Product (Account)</relationshipLabel>
        <relationshipName>Opportunity_Product1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Agent</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCI_Product_Name__c</fullName>
        <label>CCI Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCI_Product__c</fullName>
        <label>CCI Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification_Category_Name__c</fullName>
        <label>Classification Category Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification_Category__c</fullName>
        <label>Classification Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification_Main_Category_Name__c</fullName>
        <label>Classification Main Category Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification_Main_Category__c</fullName>
        <label>Classification Main Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification_Name__c</fullName>
        <label>Classification Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classified_Main_Category__c</fullName>
        <label>Classified - Main Category</label>
        <picklist>
            <picklistValues>
                <fullName>Business &amp; Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion &amp; Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homes &amp; Gardens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Noticeboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal &amp; Notices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Overseas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel Overseas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel UK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Classified_Minor_Category__c</fullName>
        <label>Classified - Minor Category</label>
        <picklist>
            <controllingField>Classified_Main_Category__c</controllingField>
            <picklistValues>
                <fullName>Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accessories &amp; Soft Furnishings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia &amp; New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balearics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bathrooms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bedrooms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackpool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bournemouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building &amp; Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Businesses For Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canaries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Hire &amp; Leasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claims Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clerical &amp; Secretarial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conservatories, Lofts &amp; Extensions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts &amp; Tenders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cornwall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cotswolds</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Classified_Sub_Category__c</fullName>
        <label>Classified - Sub Category</label>
        <picklist>
            <controllingField>Classified_Main_Category__c</controllingField>
            <picklistValues>
                <fullName>Airlines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airport Parking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apprenticeships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auctions (General)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auctions (Motors)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auctions (Property)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B&amp;B/Guest Houses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bars/Clubs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bathing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Battlefields</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Births, Deaths and Marriages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business to Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camping and Caravan Holidays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caravan Holidays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caravans &amp; Motorhomes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Hire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cars wanted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charity Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatlines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christmas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cinemas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City Living</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Trials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collectables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colleges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complementary Therapies &amp; Wellbeing</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Color_Specification__c</fullName>
        <label>Color Specification</label>
        <picklist>
            <picklistValues>
                <fullName>Mono</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Combined_Ad_Unit_Name__c</fullName>
        <label>Combined Ad Unit Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Combined_Ad_Unit__c</fullName>
        <label>Combined Ad Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Title__c</fullName>
        <label>Competitor</label>
        <picklist>
            <controllingField>Reason_for_Inactive2__c</controllingField>
            <picklistValues>
                <fullName>City AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Mirror</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Star</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Telegraph</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evening Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guardian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent &amp; I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mids only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Media - Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Media - Magazines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Media - Outdoor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Media - Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Media - TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pops only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quals only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shortlist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stylist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Express - Saturday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Mirror Saturday - We Love Telly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Star Saturday - Hot Tv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Star Sunday - Ok Extra/Take 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Star Sunday (T)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Copy_Split__c</fullName>
        <label>Copy Split</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerRef__c</fullName>
        <label>CustomerRef</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Booked__c</fullName>
        <label>Date Booked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dateflex_Daterange__c</fullName>
        <label>Dateflex Daterange</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dateflex__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dateflex</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deactivate__c</fullName>
        <formula>HYPERLINK(&apos;/apex/DeactivatePitchIdea?id=&apos; &amp; Id , IMAGE(&apos;/resource/DeleteIcon&apos;, &apos;Edit All Products&apos;),&apos;_top&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deactivate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Section__c</fullName>
        <label>Display Section</label>
        <picklist>
            <picklistValues>
                <fullName>Brochure Panels MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critics MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diary MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Watermark MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ents Composite MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Femail MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Projects MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Front</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Front Half MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good Health MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Page Vertical MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>It&apos;s Friday MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letters MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Style MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Money Mail MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROM MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROP MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sport MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMOS Projects MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV Slot MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekend Projects MD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Distribution_Name__c</fullName>
        <label>Distribution Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution__c</fullName>
        <label>Distribution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Insertion_Date__c</fullName>
        <label>First Insertion Date Old</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Insertion_Date__c</fullName>
        <label>Last Insertion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Media_Code__c</fullName>
        <label>Media Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <label>Module</label>
        <picklist>
            <picklistValues>
                <fullName>10 x 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 x 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 x 10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_of_Units__c</fullName>
        <label>No of Units</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relation ship between Order Item.</description>
        <label>Order Item</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Level_PO_Number__c</fullName>
        <label>Order Level PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Media_Used__c</fullName>
        <label>Other Media Used</label>
        <picklist>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outdoor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other press</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Name__c</fullName>
        <label>Package Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Rule_Name__c</fullName>
        <label>Package Rule Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <label>Package</label>
        <picklist>
            <picklistValues>
                <fullName>DM Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail Display Inserts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMOS Display</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductId__c</fullName>
        <label>ProductId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category_Name__c</fullName>
        <label>Product Category Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Main_Category_Name__c</fullName>
        <label>Product Main Category Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Main_Category__c</fullName>
        <label>Product Main Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>if(isPickVal(PricebookEntry.Product2.CustomerRef__c,&apos;CustomerRef4&apos;), &apos;Digital&apos;, &apos;Print&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Unit_Name__c</fullName>
        <label>Product Unit Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Unit__c</fullName>
        <label>Product Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_Name__c</fullName>
        <label>Publication Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <label>Publication</label>
        <picklist>
            <picklistValues>
                <fullName>A5 ESD Newspaper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A5 Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Mail Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Mail International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES Magazine Features</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luxury Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail On Sunday Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polybag TMOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Royal Supplement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standalone Supplement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The I ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Independent ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekend Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>You Insert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>You Magazine</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Inactive2__c</fullName>
        <label>Reason for Inactive</label>
        <picklist>
            <picklistValues>
                <fullName>Activity already booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activity discussed as value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Pulled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business titles only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign date moved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign Date moved Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Created in error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn’t Use Press</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free/House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idea Not Suited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost to A&amp;N Media Brand Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost to Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mids Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missed a tactical opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Creative Solutions booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Solutions booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not core to activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passed to classified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pops Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisional Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quails Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quals Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too Expensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong target audience</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_Group__c</fullName>
        <label>Revenue Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Count__c</fullName>
        <label>Schedule Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Schedule_Identifier__c</fullName>
        <label>Schedule Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Revenue__c</fullName>
        <formula>TEXT(PricebookEntry.Product2.Schedule_Revenue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedule Revenue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Name__c</fullName>
        <label>Section Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategic_Campaign__c</fullName>
        <formula>Opportunity.Campaign.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strategic Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Section_Name__c</fullName>
        <label>Sub Section Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Section__c</fullName>
        <label>Sub Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Category_Name__c</fullName>
        <label>Title Category Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Category__c</fullName>
        <label>Title Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Name__c</fullName>
        <label>Title Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Classified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>URN__c</fullName>
        <label>URN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>